# StarDrive

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  README.md  config.py  docker-compose.build.yml  docker-compose.yml  globals.py  local_rebuild.sh  main.py  middleware.py  pyproject.toml  ramdom_files_generator.py  security.py  utils.py
.github/: ISSUE_BUG_REPORT_TEMPLATE.md  ISSUE_FEATURE_REQUEST_TEMPLATE.md  ISSUE_QUESTION_SUPPORT_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-or-support.md
api/: __init__.py  download.py
app/: config.py  globals.py  main.py
app/api/: __init__.py  auth.py  download.py
app/bootstrap/: app.py  env.py  errors.py  lifecycle.py  logging.py  middlewares.py  routes.py  static.py
app/core/: exceptions.py  i18n.py  logging.py  paths.py  response.py
app/crud/: file_download_crud.py  user_crud.py
app/locales/: messages.pot
app/models/: user_model.py  (+1 more)
bootstrap/: errors.py  lifecycle.py  middlewares.py  routes.py  static.py
core/: i18n.py  logging.py  paths.py
crud/: file_download_crud.py  user_crud.py
middlewares/: auth_middleware.py  logging_middleware.py
models/: file_download_model.py  file_metadata.py  user_model.py
schemas/: file_schema.py  user_schema.py
security/: guards.py  ids.py  tokens.py  validators.py
services/: download_service.py  file_service.py  local_db_service.py  user_service.py
storage/: base.py  local_storage.py  manager.py
tests/: test_storage_manager.py
utils/: time.py
(+70 files in other folders)
