[project]
name = "stardrive"
version = "0.1.0"
description = "Star Drive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.17.0",
    "bcrypt>=5.0.0",
    "black>=25.11.0",
    "nicegui>=3.3.1",
    "passlib>=1.7.4",
    "psutil>=7.1.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "tzdata>=2025.2",
]
