[project]
name = "stardrive"
version = "0.1.0"
description = "Star Drive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.0",
    "babel>=2.17.0",
    "bcrypt>=5.0.0",
    "black>=25.11.0",
    "greenlet>=3.3.0",
    "nicegui>=3.5.0",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
    "tzdata>=2025.2",
    "ulid-py>=1.1.0",
]
